update payment status after cancellation completed

--- a/payment-order-integration/pom.xml
+++ b/payment-order-integration/pom.xml
@@ -8,29 +8,35 @@
         don’t want to use service-sdk-starter-core as your project’s parent, you 
         can declare it as a dependency instead, see pom-as-dependency.xml -->
     <parent>
-        <groupId>com.backbase.buildingblocks</groupId>
-        <version>14.2.1</version>
         <artifactId>service-sdk-starter-core</artifactId>
+        <groupId>com.backbase.buildingblocks</groupId>
+        <version>15.0.1</version>
         <relativePath/>
     </parent>
 
-    <groupId>com.mybank.payments.integration</groupId>
+    <groupId>com.mybank.dbs.payments.integration</groupId>
     <artifactId>payments-integration</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Backbase :: my-bank-payment-order-integration-service</name>
+    <name>Backbase :: Digital Banking Services :: my-bank-payment-order-integration-service</name>
 
     <!-- tag::add-properties[] -->
     <properties>
-        <java.version>11</java.version>
-        <swagger-annotations.version>1.6.6</swagger-annotations.version>
+        <java.version>17</java.version>
+
+        <backbase-bom.version>2022.08.5-LTS</backbase-bom.version>
+
+        <swagger-annotations.version>1.6.4</swagger-annotations.version>
         <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
-        <jackson-datatype-jsr310.version>2.13.3</jackson-datatype-jsr310.version>
         <jsr305.version>3.0.2</jsr305.version>
-        <boat.version>0.16.3</boat.version>
-        <integration-outbound-api.version>2.2.1</integration-outbound-api.version>
-        <integration-inbound-api.version>2.1.0</integration-inbound-api.version>
+        <junit-vintage-engine.version>5.8.2</junit-vintage-engine.version>
+        <boat-maven-plugin.version>0.16.5</boat-maven-plugin.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+
         <specs.path>${project.build.directory}/specs</specs.path>
+
+        <payment-order-integration-outbound-api.version>2.2.1</payment-order-integration-outbound-api.version>
+        <payment-order-integration-inbound-api.version>2.1.0</payment-order-integration-inbound-api.version>
     </properties>
     <!-- end::add-properties[] -->
 
@@ -40,7 +46,7 @@
             <dependency>
                 <groupId>com.backbase</groupId>
                 <artifactId>backbase-bom</artifactId>
-                <version>2022.08.4-LTS</version>
+                <version>${backbase-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -52,12 +58,58 @@
         <!-- tag::add-building-blocks-dependencies[] -->
         <dependency>
             <groupId>com.backbase.buildingblocks</groupId>
+            <artifactId>service-sdk-common-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.backbase.buildingblocks</groupId>
+            <artifactId>api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.backbase.buildingblocks</groupId>
+            <artifactId>auth-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.backbase.buildingblocks</groupId>
             <artifactId>communication</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-parameter-names</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
         <dependency>
             <groupId>com.backbase.buildingblocks</groupId>
             <artifactId>service-sdk-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit-vintage-engine.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
         <!-- end::add-building-blocks-dependencies[] -->
 
@@ -72,23 +124,20 @@
             <version>${jackson-databind-nullable.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${jackson-datatype-jsr310.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>${jsr305.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <!-- Add dependencies for your services, e.g. BB raml specifications, integration clients -->
 
+        <!-- Uncomment the following dependency if DBS inter-service communication is needed -->
+        <!--
+         <dependency>
+            <groupId>com.backbase.buildingblocks</groupId>
+            <artifactId>communication</artifactId>
+         </dependency>
+       -->
     </dependencies>
 
     <build>
@@ -124,7 +173,7 @@
             <plugin>
                 <groupId>com.backbase.oss</groupId>
                 <artifactId>boat-maven-plugin</artifactId>
-                <version>${boat.version}</version>
+                <version>${boat-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>generate-integration-outbound-api</id>
@@ -134,11 +183,11 @@
                         </goals>
                         <configuration>
                             <inputSpec>
-                                ${specs.path}/payment/payment-order-integration-outbound-api-v${integration-outbound-api.version}.yaml
+                                ${specs.path}/payment/payment-order-integration-outbound-api-v${payment-order-integration-outbound-api.version}.yaml
                             </inputSpec>
                             <output>${project.build.directory}/generated-sources/</output>
-                            <modelPackage>com.mybank.payments.outbound.model</modelPackage>
-                            <apiPackage>com.mybank.payments.outbound.api</apiPackage>
+                            <modelPackage>com.backbase.payments.integration.model</modelPackage>
+                            <apiPackage>com.backbase.payments.integration.outbound.api</apiPackage>
                         </configuration>
                     </execution>
                     <!-- tag::add-inbound-integration-api[] -->
@@ -150,17 +199,33 @@
                         </goals>
                         <configuration>
                             <inputSpec>
-                                ${specs.path}/payment/payment-order-integration-inbound-api-v${integration-inbound-api.version}.yaml
+                                ${specs.path}/payment/payment-order-integration-inbound-api-v${payment-order-integration-inbound-api.version}.yaml
                             </inputSpec>
                             <output>${project.build.directory}/generated-sources/</output>
-                            <modelPackage>com.mybank.payments.inbound.model</modelPackage>
-                            <apiPackage>com.mybank.payments.inbound.api</apiPackage>
+                            <modelPackage>com.backbase.payments.integration.model</modelPackage>
+                            <apiPackage>com.backbase.payments.integration.inbound.api</apiPackage>
                         </configuration>
                     </execution>
                     <!-- end::add-inbound-integration-api[] -->
                 </executions>
             </plugin>
             <!-- end::add-boat-plugin[] -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
