--- a/payment-options-extension/pom.xml
+++ b/payment-options-extension/pom.xml
@@ -4,9 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- The simplest way to build a service with service-sdk-starter-core 
-        is to use it as a parent in your project’s POM file, alternatively if you 
-        don’t want to use service-sdk-starter-core as your project’s parent, you 
-        can declare it as a dependency instead, see pom-as-dependency.xml -->
+        is to use it as a parent in your project’s POM file -->
     <parent>
         <groupId>com.backbase.buildingblocks</groupId>
         <version>15.1.0</version>
